# pdf_reader

./: .gitignore  .gitmodules  .travis.yml  CMakeLists.txt  LICENSE.md  README.md  context.cpp  context.h  document.cpp  document.h  main.cpp  pdf_reader.cpp  pdf_reader.h  pdf_reader.pro  readme.md
.circleci/: config.yml
lib/Catch2/: CMakeLists.txt
src/: context.cpp  context.h  document.cpp  document.h  main.cpp  matrix.cpp  matrix.h  pdf_reader.cpp  pdf_reader.h  pdf_reader.qrc  pdf_reader.ui  pixmap.cpp  pixmap.h  single_page_view.cpp  single_page_view.h
src/mupdf_wrapper/: CMakeLists.txt
src/mupdf_wrapper/include/mupdf_wrapper/: page.h
src/mupdf_wrapper/src/: matrix.cpp  page.cpp  pixmap.cpp
src/mupdf_wrapper/test/: context_test.cpp  document_test.cpp  matrix_test.cpp  page_test.cpp  pixmap_test.cpp
src/pdf_reader/: CMakeLists.txt  pdf_reader.pro
src/pdf_reader/resources/: resources.qrc
src/pdf_reader/src/: document.cpp  document.h  main.cpp  multiple_page_view.cpp  multiple_page_view.h  page_view.h  pdf_reader.cpp  pdf_reader.h  pdf_reader.ui  single_page_view.cpp  single_page_view.h
